--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,9 +87,15 @@
 
     <!-- battery -->
     <string name="battery_volume">battery volume</string>
-    <string name="battery_sta">battery status</string>
+    <string name="battery_status">battery status</string>
     <string name="battery_voltage">battery voltage</string>
     <string name="battery_temp">battery temperature</string>
+    <string name="battery_status_unknown">unknown</string>
+    <string name="battery_status_charging">charging</string>
+    <string name="battery_status_discharging">discharging</string>
+    <string name="battery_status_not_charging">not charging"</string>
+    <string name="battery_status_full">full</string>
+    <string name="temp_symbol">\u2103</string>
 
     <!-- standby -->
     <string name="standby_fail">standby fail</string>
