integrated baidu speech recognize sdk

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -37,6 +37,7 @@
     <string name="list_ddr">DDR</string>
     <string name="list_storage">存储空间</string>
     <string name="list_monitor_light">监控指示灯</string>
+    <string name="list_speech_recognize">语音识别</string>
 
     <!-- version items -->
     <string name="item_version">系统版本</string>
@@ -174,6 +175,15 @@
     <string name="monitor_detail">点击开始检测，查看监控指示灯是否亮灯。\n如监控指示灯没有亮灯，请打勾。</string>
     <string name="monitor_fail">监控指示灯不亮</string>
 
+    <!-- speech -->
+    <string name="speech_detail">轻触开始识别进入语音识别测试。\n如无法识别，请打勾。</string>
+    <string name="ready_speach">准备识别……</string>
+    <string name="recognizing">正在识别……</string>
+    <string name="speech_result">识别结果：</string>
+    <string name="speech_fail">无法识别</string>
+    <string name="start_speech">开始识别</string>
+    <string name="stop_speech">停止识别</string>
+
     <string name="test_not_finish_title">未完成检测</string>
     <string name="test_not_finish_alert">退出检测将不会对已检测数据进行保存，确认退出吗？</string>
     <string name="confirm">确认</string>
@@ -210,5 +220,7 @@
     <string name="time">时间</string>
     <string name="ddr">DDR测试</string>
     <string name="monitor">监控指示灯</string>
+    <string name="speech">语音识别</string>
 
+    <string name="wait_copy">等待复制文件</string>
 </resources>
