--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -174,6 +174,8 @@
     <!-- monitor light -->
     <string name="monitor_detail">点击开始检测，查看监控指示灯是否亮灯。\n如监控指示灯没有亮灯，请打勾。</string>
     <string name="monitor_fail">监控指示灯不亮</string>
+    <string name="turn_on_light">开灯</string>
+    <string name="turn_off_light">关灯</string>
 
     <!-- speech -->
     <string name="speech_detail">轻触开始识别进入语音识别测试。\n如无法识别，请打勾。</string>
