--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="list_speech_recognize">speech recognize</string>
 
     <!-- version items -->
+    <string name="cur_verison">qc apk version</string>
     <string name="item_version">system version</string>
     <string name="seq">seqnumber</string>
     <string name="lcd_manufacturer">LCD manufacturer</string>
